test/arguments/with_python_properties/zs/errors/union_public_method_property_clash_error.zs
package errors.union_public_method_property_clash_error;

union TestUnion
{
    string value1;
    uint32 bitSizeOf; // clashes with generated API
};
